use the new crawler framework

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 dependencies {
 	compile project(":halCrawler")
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.12'
+	compile group: 'org.jdom', name: 'jdom', version: '2.0.2'
 }
 
 
