--- a/build.gradle
+++ b/build.gradle
@@ -15,15 +15,16 @@ mainClassName = 'net.viperfish.crawlerApp.CrawlSite'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
-	// Use jcenter for resolving your dependencies.
-	// You can declare any Maven/Ivy/file repository here.
-	jcenter()
+    // Use jcenter for resolving your dependencies.
+    // You can declare any Maven/Ivy/file repository here.
+    jcenter()
 }
 
 dependencies {
-	compile project(":halCrawler")
-	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.12'
-	compile group: 'org.jdom', name: 'jdom', version: '2.0.2'
+    compile project(":halCrawler")
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.12'
+    compile group: 'org.jdom', name: 'jdom', version: '2.0.2'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 
